fix incorrect footer spacing

--- a/website/src/style.css
+++ b/website/src/style.css
@@ -792,7 +792,6 @@ main {
 }
 
 .footer {
-  margin-top: 4rem;
   width: 100%;
   text-align: center;
   padding: 2rem;
